dist/1.0/bin/sample/retrieveUnpackaged/objects/RRLL__c.object
<CustomObject>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Glassthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_of_Service_from_Protocol__c</fullName>
        <label>Start of Service from Protocol</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surface__c</fullName>
        <description>Roofs Rental</description>
        <label>Surface [m2]</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_months__c</fullName>
        <label>Termination (months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>The_End_Client__c</fullName>
        <label>The End Client</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Payment__c</fullName>
        <label>Type of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quatrely Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half of the Year Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annualy Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Medium__c</fullName>
        <description>Leased Lines</description>
        <label>Type of Service /Medium</label>
        <picklist>
            <picklistValues>
                <fullName>ADSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copper Pair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Fibre 2J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ducts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peering/Copper pair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peering/Dark Fibre (Pair 2J)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dark Fibre 1J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Building Access Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collocation TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PKP ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right of way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZDM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_cloning__c</fullName>
        <label>Type of cloning</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_cost__c</fullName>
        <label>Type of cost</label>
        <picklist>
            <picklistValues>
                <fullName>BIBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOAntel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICODatanet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICONovera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICONoveraCZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICONoveraEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICONoveraSFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICORomania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOSlovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CROT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valorization_Date__c</fullName>
        <label>Valorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valorization_Rate__c</fullName>
        <label>Valorization Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor (Invoice)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RRLL (Vendor (Invoice))</relationshipLabel>
        <relationshipName>RRLL2AccountVendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>a_mig__c</fullName>
        <label>a_mig</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_acc__c</fullName>
        <label>a_mig_acc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_agr__c</fullName>
        <label>a_mig_agr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_ape__c</fullName>
        <label>a_mig_ape</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_fo__c</fullName>
        <label>a_mig_fo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_o__c</fullName>
        <label>a_mig_o</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_pm__c</fullName>
        <label>a_mig_pm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_sa__c</fullName>
        <label>a_mig_sa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>a_mig_sb__c</fullName>
        <label>a_mig_sb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Roof Rental / Leased Line</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Link_ID__c</columns>
        <columns>Owner__c</columns>
        <columns>Active__c</columns>
        <columns>RL_ID__c</columns>
        <columns>Agreement__c</columns>
        <columns>Vendor_Invoice__c</columns>
        <columns>Appendix__c</columns>
        <columns>Date_of_Signing__c</columns>
        <columns>Monthly_discounted__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>One_off_fee__c</columns>
        <columns>One_off_fee_CUR__c</columns>
        <columns>End_of_Service__c</columns>
        <columns>Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Invoice__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>RL_ID__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Link_ID__c</field>
            <operation>contains</operation>
            <value>(61) 866 76 10</value>
        </filters>
        <filters>
            <field>Site_B_Customer__c</field>
            <operation>contains</operation>
        </filters>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>All_RR</fullName>
        <columns>NAME</columns>
        <columns>Scala__c</columns>
        <columns>RL_ID__c</columns>
        <columns>Comment2__c</columns>
        <columns>Agreement__c</columns>
        <columns>ACC__c</columns>
        <columns>Identification_number__c</columns>
        <columns>Contract__c</columns>
        <columns>Contract_CR__c</columns>
        <columns>CID__c</columns>
        <columns>Site_A_node__c</columns>
        <columns>One_off_fee__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>Financial_Owner__c</columns>
        <columns>End_of_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Invoice__c</field>
            <operation>contains</operation>
            <value>tp emitel</value>
        </filters>
        <filters>
            <field>Call__c</field>
            <operation>contains</operation>
            <value>545497</value>
        </filters>
        <label>All_RR</label>
    </listViews>
    <listViews>
        <fullName>NBK_PM</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Invoice__c</columns>
        <columns>Active__c</columns>
        <columns>Site_A_node__c</columns>
        <columns>Site_B_Customer__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>Monthly_Fee_CUR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Invoice__c</field>
            <operation>contains</operation>
            <value>ATM</value>
        </filters>
        <label>NBK_PM</label>
    </listViews>
    <listViews>
        <fullName>Nextno</fullName>
        <columns>Company_Name__c</columns>
        <columns>NAME</columns>
        <columns>RL_ID__c</columns>
        <columns>Active__c</columns>
        <columns>Site_B_Customer__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>Our_Customer__c</columns>
        <columns>Agreement__c</columns>
        <columns>Vendor_Invoice__c</columns>
        <columns>Site_A_node__c</columns>
        <columns>CID__c</columns>
        <columns>Link_ID__c</columns>
        <columns>Fee__c</columns>
        <columns>Start_of_Service_from_Protocol__c</columns>
        <columns>End_of_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CID__c</field>
            <operation>contains</operation>
            <value>810796</value>
        </filters>
        <label>Nextno</label>
    </listViews>
    <listViews>
        <fullName>OneOff</fullName>
        <columns>Agreement__c</columns>
        <columns>NAME</columns>
        <columns>RL_ID__c</columns>
        <columns>Planned_Start_of_Service__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>One_off_fee__c</columns>
        <columns>Month_of_One_off__c</columns>
        <columns>One_off_fee_CUR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Comment2__c</field>
            <operation>equals</operation>
            <value>4976</value>
        </filters>
        <label>OneOff</label>
    </listViews>
    <listViews>
        <fullName>accrual_account</fullName>
        <columns>NAME</columns>
        <columns>Accrual_account__c</columns>
        <columns>Financial_Owner__c</columns>
        <columns>Cost_account__c</columns>
        <columns>MOR_account__c</columns>
        <columns>Identification_number__c</columns>
        <columns>Position_on_the_invoice__c</columns>
        <columns>Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_A_node__c</field>
            <operation>contains</operation>
            <value>Blocha</value>
        </filters>
        <label>accrual account</label>
    </listViews>
    <listViews>
        <fullName>alldt</fullName>
        <columns>NAME</columns>
        <columns>Discount__c</columns>
        <columns>Discount_In_Percent__c</columns>
        <columns>Discount_start_date__c</columns>
        <columns>CID__c</columns>
        <columns>Financial_Owner__c</columns>
        <columns>Comment_Site_A__c</columns>
        <columns>Comment_Site_B__c</columns>
        <columns>Comment1__c</columns>
        <columns>Contract_Rome__c</columns>
        <columns>Contract_Termination_Specified_Term__c</columns>
        <columns>Cost_account__c</columns>
        <columns>Date_of_Signing__c</columns>
        <columns>Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>contains</operation>
            <value>chwaszczyno</value>
        </filters>
        <label>alldt</label>
    </listViews>
    <listViews>
        <fullName>t</fullName>
        <columns>Agreement__c</columns>
        <columns>NAME</columns>
        <columns>Financial_Owner__c</columns>
        <columns>Fee__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>Monthly_Fee_PLN__c</columns>
        <columns>Month_of_One_off__c</columns>
        <columns>Monthly_Fee_CUR__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product__c</columns>
        <columns>Owner__c</columns>
        <columns>MOR_account__c</columns>
        <columns>Accrual_account__c</columns>
        <columns>Appendix__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RL_ID__c</field>
            <operation>contains</operation>
            <value>l05000</value>
        </filters>
        <label>t</label>
    </listViews>
    <listViews>
        <fullName>vendorMD</fullName>
        <columns>Active__c</columns>
        <columns>Financial_Owner__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Identification_number__c</columns>
        <columns>Link_ID__c</columns>
        <columns>Cost_account__c</columns>
        <columns>Old_Item__c</columns>
        <columns>RL_ID__c</columns>
        <columns>Start_of_Service_from_Protocol__c</columns>
        <columns>Monthly_Fee__c</columns>
        <columns>Product__c</columns>
        <columns>Agreement__c</columns>
        <columns>Vendor_Invoice__c</columns>
        <columns>Scala__c</columns>
        <columns>Type_of_cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor_Invoice__c</field>
            <operation>contains</operation>
            <value>optoland</value>
        </filters>
        <label>vendorOpiekun</label>
    </listViews>
    <nameField>
        <label>RR/LL Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RRLL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Currency_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(NOT(ISNULL(Price_per_m2__c)), ISBLANK(TEXT(Price_per_m2_CUR__c))),
AND(NOT(ISNULL(Price_per_radio_dish__c  )), ISBLANK(TEXT( Price_per_radio_dish_CUR__c ))),
AND(NOT(ISNULL(Price_per_riser__c )), ISBLANK(TEXT( Price_per_riser_CUR__c))),
AND(NOT(ISNULL(Right_of_way_Price_per_km__c )), ISBLANK(TEXT( Right_of_way_Price_per_km_CUR__c ))),
AND(NOT(ISNULL(One_off_fee__c )), ISBLANK(TEXT(One_off_fee_CUR__c ))),
AND(NOT(ISNULL(Monthly_Fee__c )), ISBLANK(TEXT(Monthly_Fee_CUR__c )))
)</errorConditionFormula>
        <errorMessage>ERROR: One or more Currency fields hasn&apos;t been filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DISCOUNT_START_DATE_ISBLANK</fullName>
        <active>true</active>
        <description>OR(
IF(NOT(ISBLANK(Discount__c)),ISBLANK( Discount_start_date__c ),false),
IF(ISBLANK(Discount_start_date__c),false,MONTH(Discount_start_date__c) &gt; MONTH( TODAY() ) ))
You must insert a date. Date can not be future.</description>
        <errorConditionFormula>IF(NOT(ISBLANK(Discount__c)),AND(ISBLANK( Discount_start_date__c),Discount__c &lt;&gt; 0),false)</errorConditionFormula>
        <errorDisplayField>Discount_start_date__c</errorDisplayField>
        <errorMessage>You must insert a date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Signing_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Date_of_Signing__c )</errorConditionFormula>
        <errorDisplayField>Date_of_Signing__c</errorDisplayField>
        <errorMessage>This date can not be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Of_Service_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Date_of_Signing__c &gt; End_of_Service__c,true,false)</errorConditionFormula>
        <errorDisplayField>End_of_Service__c</errorDisplayField>
        <errorMessage>End of Service date cannot be before Date of Signing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Month_of_One_off_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Month_of_One_off__c )</errorConditionFormula>
        <errorDisplayField>Month_of_One_off__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Fee_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Monthly_Fee__c)</errorConditionFormula>
        <errorDisplayField>Monthly_Fee__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Off_Fee_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNULL(One_off_fee__c),   NOT(ISNULL( Month_of_One_off__c )))</errorConditionFormula>
        <errorDisplayField>One_off_fee__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PLANED_START_OF_SERVICE_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Planned_Start_of_Service__c )</errorConditionFormula>
        <errorDisplayField>Planned_Start_of_Service__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRLL_BANDWITH_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Report__c,&apos;Rental Report&apos;),false,ISPICKVAL( Bandwith__c,&apos;&apos; ))</errorConditionFormula>
        <errorDisplayField>Bandwith__c</errorDisplayField>
        <errorMessage>You must choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRLL_Report_ISPICKLIST</fullName>
        <active>true</active>
        <description>Field can&apos;t be empty
ISPICKVAL( Report__c , &apos;&apos;)</description>
        <errorConditionFormula>LEN(TEXT(Report__c))&lt;=1</errorConditionFormula>
        <errorDisplayField>Report__c</errorDisplayField>
        <errorMessage>You must select a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRLL_SITEA_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Site_A_node__c )</errorConditionFormula>
        <errorDisplayField>Site_A_node__c</errorDisplayField>
        <errorMessage>You must choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RRLL_SITEB_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Report__c, &quot;Rental Report&quot;),false, ISBLANK(Site_B_Customer__c))</errorConditionFormula>
        <errorDisplayField>Site_B_Customer__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TYPE_OF_COST_ISBLANK</fullName>
        <active>true</active>
        <description>This filed have to be filled
ISPICKVAL( Type_of_cost__c, &apos;&apos;)</description>
        <errorConditionFormula>LEN(TEXT(Type_of_cost__c))&lt;=1</errorConditionFormula>
        <errorDisplayField>Type_of_cost__c</errorDisplayField>
        <errorMessage>You have to choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TYPE_OF_SERVICE_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Report__c, &quot;Rental Report&quot;), ISBLANK( Type_of_Service__c), false)</errorConditionFormula>
        <errorDisplayField>Type_of_Service__c</errorDisplayField>
        <errorMessage>You have to choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TYPE_OF_SERVICE_MEDIUM_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>IF( OR(ISPICKVAL(Report__c, &quot;Crossborder&quot;), ISPICKVAL(Report__c, &quot;Lease Line&quot;)) , ISPICKVAL( Type_of_Service_Medium__c, &apos;&apos;), false)</errorConditionFormula>
        <errorDisplayField>Type_of_Service_Medium__c</errorDisplayField>
        <errorMessage>You have to choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Of_Payment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL(Monthly_Fee__c)),   ISBLANK(TEXT( Type_of_Payment__c )))</errorConditionFormula>
        <errorDisplayField>Type_of_Payment__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valorization_Date_VALIDATION</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISBLANK(Valorization_Date__c),NOT(ISBLANK( Valorization_Rate__c ))),true, false)</errorConditionFormula>
        <errorDisplayField>Valorization_Date__c</errorDisplayField>
        <errorMessage>You have to choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valorization_Rate_VALIDATION</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(Valorization_Date__c)),ISBLANK( Valorization_Rate__c )),true, false)</errorConditionFormula>
        <errorDisplayField>Valorization_Rate__c</errorDisplayField>
        <errorMessage>You have to choose a value</errorMessage>
    </validationRules>
</CustomObject>